--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -1,1 +1,25 @@
-<p>reservation-list works!</p>
+<div class="container">
+  <h2 class="mb-4">Reservations</h2>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Room Number</th>
+        <th>Start Date</th>
+        <th>End Date</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let reservation of reservations">
+        <td>{{reservation.clientFullName}}</td>
+        <td>{{reservation.roomNumber}}</td>
+        <td>{{reservation.reservationDates?.[0] | date}}</td>
+        <td>{{reservation.reservationDates?.[1] | date}}</td>
+        <td>
+          <button class="btn btn-success" [routerLink]="['/update', reservation.id]">Update</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
